--- a/templates/base.html
+++ b/templates/base.html
@@ -32,7 +32,7 @@
     </script>
 </head>
 {% block beforehead %} {% endblock %}
-<body>
+<body style="background-color: #f3f3f3">
 <div class="layui-layout ">
     <div class="layui-header">
         <div class="layui-logo"></div>
